<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAccount">

    <TextView
        android:id="@+id/lblAccountName"
        android:layout_width="114dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="20dp"
        android:text="@string/lblAccountName" />

    <EditText
        android:id="@+id/txtAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_toEndOf="@+id/lblAccountName"
        android:layout_toRightOf="@+id/lblAccountName"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblUserName"
        android:layout_width="111dp"
        android:layout_height="46dp"
        android:layout_below="@+id/lblAccountName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="37dp"
        android:text="@string/lblUserName" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAccountName"
        android:layout_alignEnd="@+id/txtAccountName"
        android:layout_alignBottom="@+id/lblUserName"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="34dp"
        android:layout_toEndOf="@+id/lblUserName"
        android:layout_toRightOf="@+id/lblUserName"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="107dp"
        android:layout_height="44dp"
        android:layout_below="@+id/lblUserName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="23dp"
        android:text="@string/lblEmail" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUserName"
        android:layout_alignStart="@+id/txtAccountName"
        android:layout_alignBottom="@+id/lblEmail"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="102dp"
        android:layout_height="41dp"
        android:layout_below="@+id/lblEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="31dp"
        android:text="@string/lblPassword" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="216dp"
        android:layout_height="42dp"
        android:layout_below="@+id/txtEmail"
        android:layout_alignBottom="@+id/lblPassword"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="-1dp"
        android:layout_toEndOf="@+id/lblPassword"
        android:layout_toRightOf="@+id/lblPassword"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/lblAccountNumber"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_below="@+id/lblPassword"
        android:layout_alignStart="@+id/lblPassword"
        android:layout_marginStart="0dp"
        android:layout_marginTop="34dp"
        android:text="@string/lblAccountNumber" />

    <EditText
        android:id="@+id/txtAccountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblAccountNumber"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_toEndOf="@+id/lblAccountNumber"
        android:layout_toRightOf="@+id/lblAccountNumber"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginEnd="107dp"
        android:layout_marginRight="107dp"
        android:layout_marginBottom="20dp"
        android:onClick="submitButton"
        android:text="@string/btnSubmit" />

    <TextView
        android:id="@+id/lblSecurity"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_below="@+id/lblAccountNumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/lblSecurity" />

    <EditText
        android:id="@+id/txtSecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAccountNumber"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_toEndOf="@+id/lblSecurity"
        android:layout_toRightOf="@+id/lblSecurity"
        android:ems="10"
        android:inputType="text" />

</RelativeLayout>